# agrometflow

./: .gitignore  404.html  Formation_Innovac_source_controlqualite_donnees_climatiques.pptx  LICENSE  README.rst  README2.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.ipynb
.github/workflows/: deploy-docs.yml
_legacy/assets/: course.css
assets/stylesheets/: zoom.css
binder/: README.md  environment.yml  postBuild  requirements.txt
controle-qualite/: index.html
docs/: README.md  accueil.md  controle-qualite.md  index.html  index.md  notebooks.html  notebooks.md  rfe-arc2.md  sources.html  sources.md
docs/_legacy/: qualite.html
examples/: chirps_bbox.yml  chirps_points.yml  config.yml  lsasaf_etp_bbox.yml  lsasaf_etp_points.yml  qc_config.yml  qc_excel_vba.bas
notebooks/: demo_plots.ipynb  index.html  metadata.ipynb  pipeline.ipynb  test.ipynb  tutorial_plots.html  tutorial_plots.qmd
notebooks/formation_cameroon/: 00_parcours_sources_climatiques.ipynb  01_explorer_les_sources_agrometflow.ipynb  02_controle_qualite_journalier.ipynb  02_controle_qualite_test.ipynb  03_demarrage_nasa_power.ipynb  05_demarrage_lsasaf_etp.ipynb  README.md
rfe-arc2/: index.html
search/: search_index.json
sources/: index.html
src/agrometflow/: cli.py  config_loader.py  metadata.py  pipeline.py  utils.py
tests/: test_ghcnd.py  test_nasapower.py  test_plots.py  test_qc.py
training_outputs/lsasaf_points/: mdmetv3_20210101_20210105_pt_p11p52_p3p87__pt_p13p40_p9p30.csv
web_qc_app/: docker-compose.yml
web_qc_app/backend/: Dockerfile  requirements.txt
(+95 files in other folders)
